fix card whitespace

--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -19,6 +19,7 @@ body {
     padding: 1rem;
     overflow: hidden;
     font-size: 16px;
+    white-space: pre-line;
 
     textarea {
         resize: none;
